-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.7.1
-
None
-
1
-
669f7e3b9 (dev), dcc482cd0 (6.7)
-
Foundation Sprint 107
trying to build 6.7.1, i ran into this compile error:
/usr/bin/clang++-17 -DBACKTRACE_HEADER=\"execinfo.h\" -DCore_EXPORTS -DELF_INTERPRETER=\"/lib64/ld-linux-x86-64.so.2\" -DQT_ASCII_CAST_WARNINGS -DQT_BUILDING_QT -DQT_BUILD_CORE_LIB -DQT_DEPRECATED_WARNINGS -DQT_DISABLE_DEPRECATED_UP_TO=0x050000 -DQT_EXPLICIT_QFILE_CONSTRUCTION_FROM_PATH -DQT_LEAN_HEADERS=1 -DQT_MOC_COMPAT -DQT_NO_AS_CONST -DQT_NO_CAST_TO_ASCII -DQT_NO_CONTEXTLESS_CONNECT -DQT_NO_DEBUG -DQT_NO_FOREACH -DQT_NO_JAVA_STYLE_ITERATORS -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_NO_QEXCHANGE -DQT_NO_QPAIR -DQT_NO_USING_NAMESPACE -DQT_TYPESAFE_FLAGS -DQT_USE_QSTRINGBUILDER -DQT_WARN_DEPRECATED_UP_TO=0x070000 -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -I/home/tim/dev/qt6/build/qtbase/src/corelib/Core_autogen/include -I/home/tim/dev/qt6/build/qtbase/include -I/home/tim/dev/qt6/build/qtbase/include/QtCore -I/home/tim/dev/qt6/qtbase/src/corelib -I/home/tim/dev/qt6/build/qtbase/src/corelib -I/home/tim/dev/qt6/build/qtbase/src/corelib/global -I/home/tim/dev/qt6/build/qtbase/src/corelib/kernel -I/home/tim/dev/qt6/qtbase/src/corelib/../3rdparty/tinycbor/src -I/home/tim/dev/qt6/build/qtbase/include/QtCore/6.7.1 -I/home/tim/dev/qt6/build/qtbase/include/QtCore/6.7.1/QtCore -I/home/tim/dev/qt6/qtbase/src/corelib/../3rdparty/forkfd -I/home/tim/dev/qt6/build/qtbase/src/corelib/.rcc -I/home/tim/dev/qt6/qtbase/mkspecs/linux-clang -isystem /usr/include/double-conversion -isystem /usr/include/glib-2.0 -isystem /usr/lib/x86_64-linux-gnu/glib-2.0/include -march=skylake -DNDEBUG -O3 -std=c++20 -fPIC -fvisibility=hidden -fvisibility-inlines-hidden -Wall -Wextra -fexceptions -MD -MT qtbase/src/corelib/CMakeFiles/Core.dir/compat/removed_api.cpp.o -MF qtbase/src/corelib/CMakeFiles/Core.dir/compat/removed_api.cpp.o.d -o qtbase/src/corelib/CMakeFiles/Core.dir/compat/removed_api.cpp.o -c /home/tim/dev/qt6/qtbase/src/corelib/compat/removed_api.cpp In file included from /home/tim/dev/qt6/qtbase/src/corelib/compat/removed_api.cpp:287: In file included from /home/tim/dev/qt6/build/qtbase/include/QtCore/qdir.h:1: In file included from /home/tim/dev/qt6/qtbase/src/corelib/io/qdir.h:9: In file included from /home/tim/dev/qt6/build/qtbase/include/QtCore/qfileinfo.h:1: In file included from /home/tim/dev/qt6/qtbase/src/corelib/io/qfileinfo.h:11: In file included from /home/tim/dev/qt6/build/qtbase/include/QtCore/qdatetime.h:1: /home/tim/dev/qt6/qtbase/src/corelib/time/qdatetime.h:532:19: error: call to constructor of 'QDateTime' is ambiguous 532 | QDateTime result(QDate(1970, 1, 1), QTime(0, 0, 0)); | ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ /home/tim/dev/qt6/qtbase/src/corelib/time/qdatetime.h:359:5: note: candidate constructor 359 | QDateTime(QDate date, QTime time); | ^ /home/tim/dev/qt6/qtbase/src/corelib/time/qdatetime.h:363:5: note: candidate constructor 363 | QDateTime(QDate date, QTime time, | ^ 1 error generated.
- is duplicated by
-
QTBUG-126007 Clang 18, error: call to constructor of 'QDateTime' is ambiguous
-
- Closed
-
For Gerrit Dashboard: QTBUG-125079 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
559618,2 | Disambiguate a QDateTime construction | dev | qt/qtbase | Status: MERGED | +2 | 0 |
560332,2 | Disambiguate a QDateTime construction | 6.7 | qt/qtbase | Status: MERGED | +2 | 0 |